# aimux

./: .gitignore  .golangci.yml  .goreleaser.yml  .pre-commit-config.yaml  BUILD_PIPELINE.md  Dockerfile  Makefile  README.md  go.mod  go.sum
.claude/: CLAUDE.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
cmd/aimux/: main.go  main_test.go
cmd/mcp/: main.go  main_test.go
deploy/k8s/: README.md  agent-claude-coder.yaml  agent-claude-researcher.yaml  agent-claude-reviewer.yaml  agent-claude-session.yaml  agent-claude-task.yaml  agent-gemini-coder.yaml  agent-gemini-researcher.yaml  hook-config.json  networkpolicy.yaml  otel-collector.yaml  rbac.yaml  redis.yaml  secrets.yaml
docs/: adding-a-provider.md  index.html  k8s-quickstart.md
docs/examples/: mlflow-integration.md
docs/plans/: 2026-02-20-claudetopus-design.md  2026-02-20-claudetopus-implementation-plan.md  2026-02-26-agentmux-implementation-plan.md  2026-02-26-agentmux-redesign-design.md  2026-02-28-agent-launcher-design.md  2026-02-28-observability-roadmap.md  2026-03-03-k8s-multi-agent-architecture.md  2026-03-06-session-history-design.md  2026-03-07-subagent-identity-design.md  2026-03-08-controller-extraction.md  (+4 more)
runtime/: README.md
runtime/coordinator/: __init__.py  coordinator.py  pyproject.toml
runtime/coordinator/lua/: claim_task.lua
runtime/coordinator/tests/: test_coordinator.py  test_coordinator_integration.py
scripts/: aimux-k8s.sh  check-otel.sh  k8s-agents-mcp-start.sh  test-otel.sh
testdata/: sample_session.jsonl
web/: package.json  pnpm-lock.yaml
(+216 files in other folders)
